add: added api to grab raw asm's
